--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,13 @@ data/test_raw.csv
 /models/
 model/variables/variables.data-00000-of-00001
 model/variables/variables.index
+model2 2/keras_metadata.pb
+model2 2/mobilenet.h5
+model2 2/model.h5
+model2 2/model.json
+model2 2/model2_h5.h5
+model2 2/modeljson.json
+model2 2/modelweights.h5
+model2 2/saved_model.pb
+model2 2/variables/variables.data-00000-of-00001
+model2 2/variables/variables.index
